--- a/ansible/roles/edgerouter_static_hosts/tasks/main.yml
+++ b/ansible/roles/edgerouter_static_hosts/tasks/main.yml
@@ -1,24 +1,38 @@
 ---
+- name: debug
+  debug:
+    msg: "hosts_map is: {{ hosts_map | type_debug}}"
+
+- name: set hosts_map to dict if string
+  set_fact:
+    hosts_dict: "{{ hosts_map | from_json }}"
+  when: hosts_map | type_debug == 'str'
+
+- name: set hosts_map to dict
+  set_fact:
+    hosts_dict: "{{ hosts_map }}"
+
 - name: Check variables
   assert:
     that:
-      - host_fqdn is defined
-      - host_ip | ipaddr
-      - host_mac is regex("^([a-fA-F0-9]{2}[:|\-]?){6}$")
-      - host_shared_network_name is defined
-      - host_subnet | ipsubnet
+      - item.key is defined
+      - item.value.ip | ipaddr
+      - item.value.mac is regex("^([a-fA-F0-9]{2}[:|\-]?){6}$")
+      - item.value.network_name is defined
+      - item.value.subnet | ipsubnet
+  with_dict: "{{ hosts_map }}"
 
+- name: debugtemplate
+  debug:
+    msg: "{{ lookup('template', './mappings.j2') }}"
+
+# TODO: turn this into a templated list of operations - doing this with with_dict is sloooooooooow
 - name: Set the static host and dhcp mapping
   edgeos_config:
-    lines:
-    - set service dhcp-server shared-network-name {{ host_shared_network_name }} subnet {{ host_subnet }} static-mapping {{ host_fqdn }} ip-address {{ host_ip }}
-    - set service dhcp-server shared-network-name {{ host_shared_network_name }} subnet {{ host_subnet }} static-mapping {{ host_fqdn }} mac-address {{ host_mac }}
-    - set system static-host-mapping host-name {{ host_fqdn }} inet {{ host_ip }}
-  when: host_state is not defined or host_state != 'absent'
-
-- name: Delete the static host and dhcp mapping
-  edgeos_config:
-    lines:
-    - delete service dhcp-server shared-network-name {{ host_shared_network_name }} subnet {{ host_subnet }} static-mapping {{ host_fqdn }}
-    - delete system static-host-mapping host-name {{ host_fqdn }}
-  when: host_state is defined and host_state == 'absent'
+    lines: "{{ lookup('template', './mappings.j2') }}"
+#    - delete service dhcp-server shared-network-name {{ item.value.network_name }} subnet {{ item.value.subnet }} static-mapping {{ item.key }}
+#    - delete system static-host-mapping host-name {{ item.key }}
+#    - set service dhcp-server shared-network-name {{ item.value.network_name }} subnet {{ item.value.subnet }} static-mapping {{ item.key }} ip-address {{ item.value.ip }}
+#    - set service dhcp-server shared-network-name {{ item.value.network_name }} subnet {{ item.value.subnet }} static-mapping {{ item.key }} mac-address {{ item.value.mac | lower }}
+#    - set system static-host-mapping host-name {{ item.key }} inet {{ item.value.ip }}
+#  with_dict: "{{ hosts_map }}"
