--- a/ansible/roles/edgerouter_static_hosts/meta/main.yml
+++ b/ansible/roles/edgerouter_static_hosts/meta/main.yml
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: license GPL-2.0-or-later
 
   min_ansible_version: 2.4
 
@@ -28,6 +28,10 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   # platforms:
+  platforms:
+    - name: CentOS
+      versions:
+      - 7
   # - name: Fedora
   #   versions:
   #   - all
@@ -50,4 +54,3 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  
