--- a/ansible/roles/kubeadm/tasks/helm.yml
+++ b/ansible/roles/kubeadm/tasks/helm.yml
@@ -13,3 +13,45 @@
   file:
     path: /usr/local/bin/helm
     mode: 0755
+
+- name: Create ServiceAccount for Tiller client
+  k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: ServiceAccount
+      metadata:
+        name: tiller
+        namespace: kube-system
+    validate:
+      fail_on_error: yes
+      strict: yes
+
+- name: Create ClusterRoleBinding for Tiller Service Account
+  k8s:
+    state: present
+    definition:
+      apiVersion: rbac.authorization.k8s.io/v1
+      kind: ClusterRoleBinding
+      metadata:
+        name: tiller-cluster-role
+      roleRef:
+        apiGroup: rbac.authorization.k8s.io
+        kind: ClusterRole
+        name: cluster-admin
+      subjects:
+        - kind: ServiceAccount
+          name: tiller
+          namespace: kube-system
+    validate:
+      fail_on_error: yes
+      strict: yes
+
+- name: Check if Helm is installed
+  command: helm list
+  changed_when: False
+  register: helm_list
+
+- name: Helm init
+  command: helm init --upgrade --service-account tiller --history-max 10 --wait
+  when: helm_list.rc != 0
