--- a/ansible/roles/kubeadm/tasks/main.yml
+++ b/ansible/roles/kubeadm/tasks/main.yml
@@ -165,6 +165,11 @@
   register: control_plane_pods_ready
 
 - include_tasks: flannel.yml
+- include_tasks: localstorage.yml
 - include_tasks: helm.yml
 - include_tasks: flux.yml
-
+- include_tasks: nginx-ingress.yml
+- include_tasks: cert-manager.yml
+- include_tasks: root-ca.yml
+- include_tasks: gitlab.yml
+- include_tasks: gitlab-runner.yml
