--- a/ansible/roles/kubeadm/tasks/main.yml
+++ b/ansible/roles/kubeadm/tasks/main.yml
@@ -1,20 +1,13 @@
 ---
-#- name: kubeadm script
-#  script: kubeadm.sh
-#  register: kubeadm_out
-#
-#- name: dump out
-#  debug:
-#    var: kubeadm_out
+- name: yum upgrade all
+  yum:
+    name: "*"
+    state: latest
+
 - name: Install Python Pip
   package:
     name: python-pip
     state: present
-
-- name: upgrade Pip
-  pip:
-    name: pip
-    state: latest
 
 - name: Install/Upgrade Python setuptools with Pip
   pip:
@@ -32,10 +25,10 @@
     name: kubernetes-validate
     state: present
 
-- name: yum upgrade all
-  yum:
-    name: "*"
-    state: latest
+- name: Upgrade more-itertools Pip package
+  pip:
+    name: more-itertools
+    version: '>=5.0.0,<6.0.0'
 
 - name: Install Docker
   yum:
@@ -62,10 +55,15 @@
     sysctl_file: /etc/sysctl.d/k8s.conf
     reload: yes
 
+- name: Disable SeLinux
+  selinux:
+    state: permissive
+    policy: targeted
+
 - name: k8s yum repo
   yum_repository:
-    name: Kubernetes
-    description: Kubernetes packages
+    name: kubernetes
+    description: kubernetes
     state: present
     enabled: no
     baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
@@ -73,19 +71,14 @@
     gpgcheck: yes
     repo_gpgcheck: yes
 
-- name: Disable SeLinux
-  selinux:
-    state: permissive
-    policy: targeted
-
 - name: Install k8s packages
   yum:
+    name:
+      - "kubelet-{{ k8s_package_version }}"
+      - "kubeadm-{{ k8s_package_version }}"
+      - "kubectl-{{ k8s_package_version }}"
     state: installed
-    enablerepo: Kubernetes
-  with_items:
-  - "kubelet-{{ k8s_package_version }}"
-  - "kubeadm-{{ k8s_package_version }}"
-  - "kubectl-{{ k8s_package_version }}"
+    enablerepo: kubernetes
 
 - name: Start kubelet service
   service:
@@ -93,17 +86,19 @@
     state: started
     enabled: yes
 
-- name: Check k8s status
-  command: kubectl  get componentstatuses
+- name: Check k8s status to determine if we need to run kubeadm
+  command: "kubectl get componentstatuses"
   changed_when: False
+  failed_when: False
   register: k8s_status
 
 - name: Run kubeadm to init k8s
-  command: >
-    kubeadm init
-    --pod-network-cidr={{ pod_network_cidr }}
-    --kubernetes_version={{ k8s_cluster_version }}
-    {{ kubernetes_kubeadm_init_extra_opts }}
+  command: |
+    kubeadm init \
+      --pod-network-cidr="{{ pod_network_cidr }}" \
+      --kubernetes-version="{{ k8s_cluster_version }}" \
+      --apiserver-cert-extra-sans="{{ api_cluster_domain }}" \
+      {{ kubernetes_kubeadm_init_extra_opts | default('') }}
   when: k8s_status.rc != 0
 
 - name: Create .kube directory
@@ -125,7 +120,7 @@
     curl --silent --tlsv1.2
     --cert /etc/kubernetes/pki/apiserver-kubelet-client.crt
     --key /etc/kubernetes/pki/apiserver-kubelet-client.key
-    --cacert /etc/kubernetes/pki/ca.crt https://{{ ansible_fqdn }}:6443/healthz
+    --cacert /etc/kubernetes/pki/ca.crt https://{{ api_cluster_domain }}:6443/healthz
   args:
     # Disables the following warning:
     # Consider using get_url or uri module rather than running curl
@@ -138,16 +133,16 @@
   run_once: True
 
 - name: Get master taint status
-  shell: kubectl get node -o json | jq '.items[] | select(.spec.taints != null) .spec.taints'
+  shell: "kubectl get nodes -o json | jq '.items[] | select(.spec.taints != null) .spec.taints'"
   changed_when: False
   register: master_taints
 
-- name: taint master k8s nodes
-  command: kubectl taint nodes --all node-role.kubernetes.io/master-kubectl taint nodes --all node-role.kubernetes.io/master-
-  when: master_taints.stdout | trim != ''
+- name: untaint master k8s nodes
+  command: "kubectl taint nodes --all node-role.kubernetes.io/master-kubectl taint nodes --all node-role.kubernetes.io/master-"
+  when: master_taints.stdout | trim | length > 0
 
 - name: Wait for all control-plane pods become created
-  shell: "kubectl get po --namespace=kube-system --selector tier=control-plane --output=jsonpath='{.items[*].metadata.name}'"
+  shell: "kubectl get pods --namespace=kube-system --selector tier=control-plane --output=jsonpath='{.items[*].metadata.name}'"
   register: control_plane_pods_created
   until: item in control_plane_pods_created.stdout
   retries: 10
@@ -160,7 +155,7 @@
     - kube-scheduler
 
 - name: Wait for control-plane pods become ready
-  shell: "kubectl wait --namespace=kube-system --for=condition=Ready pods --selector tier=control-plane --timeout=600s"
+  command: "kubectl wait --namespace=kube-system --for=condition=Ready pods --selector tier=control-plane --timeout=600s"
   changed_when: False
   register: control_plane_pods_ready
 
